# windows-repack

./: .gitignore  pyproject.toml  windows_repack.py
data/: AppAssoc.xml  hosts
scripts/: repack.ps1
